# amazon_ai_agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.fastapi  Makefile  README.md  docker-compose.yml  pyproject.toml
evals/: eval_retriever.py
notebooks/: 01-test-llm-api.ipynb  02-explore-amazon-dataset.ipynb  03-rag-preprocessing-sample-qdrant.ipynb  03-sample-preprocess-qdrant-rag.ipynb  04-synth-evaluation-dataset.ipynb  05-hybrid-search.ipynb  06-langgraph-into.ipynb  07-langgrapg-single-turn-assistant.ipynb  08-langgraph-multi-turn-assistant.ipynb  09-multiple-tools.ipynb  10-human-feedback.ipynb
src/api/: main.py
src/api/api/: endpoints.py  middleware.py  models.py
src/api/core/: config.py
src/api/processors/: submit_feedback.py
src/api/rag/: agent.py  graph.py  retrieval.py  tools.py
src/api/rag/prompts/: rag_generation.yaml
src/api/rag/utils/: utils.py
src/chatbot-ui/: retrieval.py  streamlit_app.py
src/chatbot-ui/core/: config.py
src/chatbot_ui/: retrieval v0.1 naive.py  retrieval.py  streamlit_app v0.1.py  streamlit_app v0.2.py  streamlit_app.py
src/chatbot_ui/core/: config.py
