[project]
name = "amazon-ai-agent"
version = "0.1.0"
description = "AI Agent for Amazon products"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "google-genai>=1.22.0",
    "groq>=0.29.0",
    "httpx>=0.28.1",
    "instructor>=1.9.2",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-postgres>=2.0.22",
    "langgraph-prebuilt>=0.5.2",
    "langsmith>=0.4.4",
    "openai>=1.92.3",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.14.3",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]


# To install only prod dependencies: uv sync
# To install only dev dependencies: uv sync --extra dev

# To add to prod dependencies: uv add jupyter nbconvert
# To add to dev dependencies: uv add --dev jupyter nbconvert

# To remove from prod dependencies: uv remove jupyter nbconvert
# To remove from dev dependencies: uv remove --dev jupyter nbconvert

[project.optional-dependencies]
dev = ["jupyter", "nbconvert", "ipykernel", "matplotlib"]

# Will need to install after each uv sync
# uv pip install ipykernel -U --force-reinstall
# pip install --upgrade jupyter
# uv pip install nbconvert
# uv pip install matplotlib
